# HP-gaming-garage-thingy

./: .gitmodules  CMakeLists.txt  README.md
game/: CMakeLists.txt  main.cpp  main.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/: CMakeLists.txt
res/shaders/: default.fs  default.vs  default_frag.glsl  default_vert.glsl  light_frag.glsl  light_vert.glsl  texture_frag.glsl
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/engine/: CMakeLists.txt  app.h  engine.cpp  engine.h
src/input/: CMakeLists.txt  input.cpp  input.h  mouseinput.cpp  mouseinput.h
src/mesh/: CMakeLists.txt  cube.cpp  cube.h  mesh.cpp  mesh.h  sphere.cpp  sphere.h
src/scene/: CMakeLists.txt  scene.cpp  scene.h  scenes.cpp  scenes.h
src/shading/: CMakeLists.txt  shader.cpp  shader.h  texture.cpp  texture.h
src/texture/: CMakeLists.txt  texture.cpp
src/win/: CMakeLists.txt  Window.cpp  Window.h
utils/: build.bat  config.bat  run.bat
